# nervetrack

./: .env.example  .gitignore  README.md  SPEC.md  docker-compose.dev.yml  docker-compose.images.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  entrypoint.sh  fly.toml  litestream.yml  pyproject.toml
backend/app/: auth.py  config.py  db.py  deps.py  main.py
backend/app/migrations/: 0001_initial.sql  0002_notes_log_and_checkbox_times.sql  0003_auth_password.sql  0004_pain_instances.sql  0005_weekly_next_steps.sql  0006_ai_tables.sql  0007_records.sql  0008_tingling.sql
backend/app/models/: ai.py  entries.py  exercises.py  notes.py  pain_instances.py  postures.py  records.py  sessions.py  stats.py  timer.py  tingling.py  weekly.py
backend/app/routers/: ai.py  auth.py  daily_entries.py  documents.py  exercises.py  imports.py  pain_instances.py  records.py  sessions.py  stats.py  timer.py  tingling.py  weekly.py
backend/tests/: conftest.py  test_ai_migration.py  test_ai_models.py  test_ai_router.py  test_ai_tools.py  test_auth.py  test_auth_modes.py  test_backfill_overnight.py  test_condition_notes.py  test_conversations.py  test_crypto.py  test_db_types.py  test_documents_router.py  test_documents_service.py  test_entries.py  test_import.py  test_interval_split.py  test_isolation.py  test_last_logs.py  test_llm.py  test_llm_settings.py  test_pain_instances.py  test_profile.py  test_records_context.py  test_records_migration.py  test_records_models.py  test_sessions.py  test_timer.py  test_tingling.py  test_weekly.py  test_weekly_next_steps.py
(+123 files in other folders)
