[project]
name = "nervetrack-backend"
version = "0.1.0"
description = "NerveTrack backend — piriformis recovery tracking API"
license = "AGPL-3.0-only"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "openpyxl>=3.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "google-auth>=2.30",
    "requests>=2.31",
    "passlib[argon2]>=1.7",
    "email-validator>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
# B008: FastAPI's Depends()/File() default-argument idiom is intentional.
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
# Test fixtures use long inline spreadsheet rows; readability over wrapping.
"tests/*" = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
